[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/DebuggingUI.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/Play-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="DebuggingUI" type="Control"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 64.0
margin_top = 65.0
margin_right = 241.0
margin_bottom = 153.0
theme = SubResource( 1 )

[node name="TankPosition" type="Label" parent="VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 177.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "Tank Position: NA"

[node name="TurretAngle" type="Label" parent="VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 23.0
margin_right = 177.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "Turret Angle: N/A"

[node name="ProjectilePosition" type="Label" parent="VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 46.0
margin_right = 177.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "Projectile Position: N/A"

[node name="BulletInstancesCount" type="Label" parent="VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 69.0
margin_right = 177.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Bullet Instances: N/A"
